# EngineeringOS

./: .gitignore  README.md  company.yaml  mcp.json  pyproject.toml  pytest_out.txt  requirements.txt  workflow-v1.md  workflow.yaml
.company/autonomous/: approvals.yaml
.company/history/: execution.jsonl
.company/instance/: session.yaml
.company/recent/: projects.yaml
.company/session/: execution.yaml
.company/source_control/: approvals.yaml
.cursor/agents/: documentation-engineer.md  engineering-manager.md  senior-backend-engineer.md  senior-business-analyst.md  senior-code-reviewer.md  senior-frontend-engineer.md  senior-product-manager.md  senior-qa-engineer.md  senior-software-architect.md  senior-software-planner.md  source-control-engineer.md
desktop/: README.md
desktop/app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/bridge/: __init__.py  __main__.py  run.py  server.py
docs/: README.md
docs/adr/: 0001-framework-philosophy.md  0002-framework-boundaries.md  0003-company-instance-model.md  0004-workspace-model.md  0005-project-model.md  0006-framework-api.md  0007-package-architecture.md  0008-product-ecosystem.md  0009-editor-integrations.md  0010-plugin-system.md  0011-versioning.md  0012-repository-philosophy.md
docs/ai-execution/: README.md
docs/alignment/: README.md  architecture-sync-report.md  contract-sync-report.md  documentation-alignment-report.md  readme-refresh.md
docs/audit/: architecture-compliance.md  coupling-report.md  dependency-analysis.md  future-extension-readiness.md  implementation-audit.md  package-scorecard.md  release-readiness.md  technical-debt.md
docs/autonomous-company/: README.md  approvals.md  cli.md  decisions.md  goals.md  recovery.md  supervisor.md
docs/cleanup/: README.md  cleanup-report.md  coverage-report.md  dead-code-report.md  technical-debt-report.md
docs/cli/: README.md
docs/documentation/: documentation-platform.md  documentation-templates.md  documentation-validation.md  github-documentation.md
docs/framework/: cli-architecture.md  company-instance-model.md  dependency-map.md  domain-model.md  framework-api.md  framework-architecture.md  framework-model.md  integration-architecture.md  lifecycle.md  package-architecture.md  plugin-architecture.md  product-ecosystem.md  project-model.md  system-context.md  versioning-strategy.md  workspace-model.md
docs/kernel-hardening/: README.md  architecture-compliance-report.md  checkpoint-design.md  checkpoint-migration.md  coverage-report.md  dependency-purity-report.md  event-consistency-report.md  kernel-hardening-report.md  (+1 more)
handbook/: coding-standards.md  communication-guidelines.md  company-handbook.md  definition-of-done.md  documentation-standards.md  documentation-style-guide.md  engineering-standards.md  review-checklist.md  tech-stack.md  testing-standards.md
mcp/: capabilities.yaml  configuration-guide.md  employee-matrix.md  evidence-policy.md  future-roadmap.md  health-checks.md  installation-guide.md  permission-policy.md  registry.yaml  security-policy.md  selection-policy.md  validation-policy.md
mcp_platform/: __init__.py  __main__.py  health.py  loader.py  models.py  resolver.py  validator.py
runtime/: employee-registry.yaml  interfaces.md
tests/: __init__.py  conftest.py  test_argument_parsing.py  test_cli_startup.py  test_command_discovery.py  test_config_loading.py  test_help.py  test_placeholders.py  test_version.py
(+139 files in other folders)
